Add Inventory and Member items to navbar

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -78,6 +78,7 @@ form details {
 
 header.navbar {
   margin-bottom: 1rem;
+  margin-top: 1rem;
 }
 
 .toast {
@@ -301,7 +302,7 @@ $photo-width: 187px;
   .responsive-table {
     display: block;
     & .responsive-table-header { display: none; }
-    & .responsive-table-cell { 
+    & .responsive-table-cell {
       width: 100% !important;
       &:empty {
         display: none;
@@ -314,7 +315,7 @@ $photo-width: 187px;
     .responsive-table.four-columns  > &:nth-of-type(4n+1),
     .responsive-table.five-columns  > &:nth-of-type(5n+1),
     .responsive-table.six-columns   > &:nth-of-type(6n+1),
-    .responsive-table.seven-columns > &:nth-of-type(7n+1) { 
+    .responsive-table.seven-columns > &:nth-of-type(7n+1) {
       font-weight: bold;
     }
     .responsive-table.two-columns   > &:nth-of-type(2n),
@@ -322,7 +323,7 @@ $photo-width: 187px;
     .responsive-table.four-columns  > &:nth-of-type(4n),
     .responsive-table.five-columns  > &:nth-of-type(5n),
     .responsive-table.six-columns   > &:nth-of-type(6n),
-    .responsive-table.seven-columns > &:nth-of-type(7n) { 
+    .responsive-table.seven-columns > &:nth-of-type(7n) {
       margin-bottom: 2rem;
     }
   }
